# pko

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  pyproject.toml  pytest.ini
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/adr/: ADR-LOG.md
scripts/: sync_vendor.py
skills/pko-discover/: SKILL.md
skills/pko-install/: SKILL.md
skills/pko-start/: SKILL.md
src/pko/: __init__.py  __main__.py  app.py  client.py  config.py  discover.py  main.py  models.py  system.py  ui.py
tests/: test_client.py  test_config.py  test_discover.py  test_main.py  test_models.py
