[project]
name = "pko"
version = "0.2.0"
description = "CLI for Pinokio — automate app lifecycle, config, and discovery via pinokiod"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = []

dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "websockets>=12",
    "rich>=13",
    "pydantic>=2",
]

[project.scripts]
pko = "pko.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pko"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-httpx>=0.35"]