[project]
name = "pko"
version = "0.2.0"
description = "CLI for Pinokio — automate app lifecycle, config, and discovery via pinokiod"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = []

dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "websockets>=12",
    "rich>=13",
]

[project.scripts]
pko = "pko.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pko"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-httpx>=0.35"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true